--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "path": "^0.12.7",
+    "postcss-custom-properties": "^9.0.1",
     "postcss-loader": "^3.0.0",
+    "postcss-nested": "^4.1.2",
     "react-hot-loader": "^4.3.12",
     "redux-devtools": "^3.5.0",
     "redux-devtools-dock-monitor": "^1.1.3",
