--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.8.0",
     "react-dom": "^16.4.2",
     "react-i18next": "^9.0.4",
+    "react-inlinesvg": "^0.8.4",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
