--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "path": "^0.12.7",
+    "postcss-color-function": "^4.1.0",
     "postcss-custom-properties": "^9.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.2",
