--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "NODE_ENV=production webpack --config ./config/webpack.production.config.js",
     "dev": "webpack-dev-server --config ./config/webpack.dev.config.js",
-    "deploy": "git subtree push --prefix build origin gh-pages",
+    "deploy": "git push origin `git subtree split --prefix build gh-pages`:gh-pages --force",
     "lint": "eslint ."
   },
   "dependencies": {
